infrastructure/dev-server-for-petclinic-app-cfn-template.yml
AWSTemplateVersion: 2010-09-09

Description:


Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH Conneciton
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair

Resources:
  PetclinicDemoSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP for Petclinic Microservices
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8082
          ToPort: 8082
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8083
          ToPort: 8083
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8888
          ToPort: 8888
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9411
          ToPort: 9144
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 7979
          ToPort: 7979
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9091
          ToPort: 9091
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8761
          ToPort: 8761
          CidrIp: 0.0.0.0/0
  PetclinicServerLT:
    Type: "AWS::EC2::LaunchTemplate"
      Properties:
        LaunchTemplateData:
          ImageId: ami-038b5c5d2ad6a5090
          InstanceType: t2.medium
          KeyName: !Ref KeyPairName
          SecurityGroupIds:
            - !GetAtt PetclinicDemoSG.GroupId
          UserData:
            Fn::Base64: |
              #! /bin/bash
              yum update -y
              hostnamectl set-hostname petclinic-dev-server  
              amazon-linux-extras install docker -y
              systemctl start docker
              systemctl enable docker
              usermod -a -G docker ec2-user
              curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
              -o /usr/local/bin/docker-compose
              chmod +x /usr/local/bin/docker-compose
              yum install git -y
              yum install java-11-amazon-corretto -y
              git clone https://github.com/davidclarusway/petclinic-microservices.git
              git fetch
              git checkout dev
  PetclinicServer:
    Type: ASW::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateID: !Ref PetclinicServerLT
        Version: !GetAtt PetClinicServerLT.LatestVersionNumber
      Tags:
        - Key: Name
          Value: !Sub Petclinic App Dev Server of ${AWS::Instance}

Output:
  PetClinicServerDNSName:
    Description: Petclinic App URL
    Value: !GetAtt PetclinicServer.PublicDnsName
